--- a/.env
+++ b/.env
@@ -38,8 +38,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=hemayet.nsl@gmail.com
-MAIL_PASSWORD=ewunirjhoy146
+MAIL_USERNAME=nsl.assessment.center@gmail.com
+MAIL_PASSWORD="Nothing nsl"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=hemayet.nsl@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
