Assessment wise response updated and bug fixes

--- a/.env
+++ b/.env
@@ -36,12 +36,12 @@ REDIS_PORT=6379
 #MAIL_FROM_NAME="${APP_NAME}"
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp-mail.outlook.com
 MAIL_PORT=587
-MAIL_USERNAME=nsl.assessment.center@gmail.com
-MAIL_PASSWORD="Nothing nsl"
+MAIL_USERNAME=mohammad.hemayet@neural-semiconductor.com
+MAIL_PASSWORD="EWUnirjhoy146"
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=hemayet.nsl@gmail.com
+MAIL_FROM_ADDRESS=mohammad.hemayet@neural-semiconductor.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
