--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME="NSL - Assessment Center"
 APP_ENV=local
-APP_KEY=base64:+TefKE+Y3/FgGp6ep+luM6XdfroVWIZ5AsPoJzu506o=
+APP_KEY=base64:nfGaX+gL+cTuhKak2uU8IPRgil84Id4xcqEv1ijKx48=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,12 +9,12 @@ TO_EMAIL=hemayet.nirjhoy@gmail.com
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=ac_backend
+DB_PORT=3306
+DB_DATABASE=assessment_center_update
 DB_USERNAME=root
-DB_PASSWORD=nothing
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
