access layer added

--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ TO_EMAIL=hemayet.nirjhoy@gmail.com
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=assessment_center_update
+DB_PORT=5432
+DB_DATABASE=ac_backend
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=nothing
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
