email body modified

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:nfGaX+gL+cTuhKak2uU8IPRgil84Id4xcqEv1ijKx48=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-FRONT_END_HOME=http://127.0.0.1:5000/
+FRONT_END_HOME=http://127.0.0.1:5000
 TO_EMAIL=hemayet.nirjhoy@gmail.com
 
 LOG_CHANNEL=stack
