failed user will be deleted

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=assessment_center
+DB_PORT=5432
+DB_DATABASE=ac_backend
 DB_USERNAME=root
 DB_PASSWORD=nothing
 
