--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ TO_EMAIL=hemayet.nirjhoy@gmail.com
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=ac_backend
+DB_PORT=3306
+DB_DATABASE=assessment_center
 DB_USERNAME=root
-DB_PASSWORD=nothing
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
