--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="NSL - Assessment Center"
 APP_ENV=local
 APP_KEY=base64:VfiJ04BpjNz/eApsH0W52QdivpYOFfzlNGGRkJF6zGc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:5000
 
 FRONT_END_HOME=http://127.0.0.1:5000
 TO_EMAIL=hemayet.nirjhoy@gmail.com
@@ -14,7 +14,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=assessment_center
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
