--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
-        "spatie/laravel-permission": "^3.16"
+        "spatie/laravel-permission": "^3.16",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
