student Bulk-entry bug fixe

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ APP_NAME="NSL - Assessment Center"
 APP_ENV=local
 APP_KEY=base64:VfiJ04BpjNz/eApsH0W52QdivpYOFfzlNGGRkJF6zGc=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:5000
+APP_URL=http://10.10.32.217/assessment/ac-frontend/public
 
-FRONT_END_HOME=http://127.0.0.1:5000
+FRONT_END_HOME=http://10.10.32.217/assessment/ac-frontend/public
 TO_EMAIL=hemayet.nirjhoy@gmail.com
 
 LOG_CHANNEL=stack
