--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ BULK_EMAIL_DELAY=2  #SECONDS
 EMAIL_SERVER_JOB_DELAY=2 #SECONDS
 EMAIL_SERVER_URL=http://localhost:6900/api/v1/
 
+#CACHING-CONFIGURATION
+CACHE_KEY=assessment_center
+
 FRONT_END_HOME=http://10.10.32.217/assessment/ac-frontend/public
 TO_EMAIL=hemayet.nirjhoy@gmail.com
 LOG_CHANNEL=stack
