skype default value changed 0 to n/a

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ EMAIL_SERVER_JOB_DELAY=2 #SECONDS
 EMAIL_SERVER_URL=http://localhost:6900/api/v1/
 
 #CACHING-CONFIGURATION
-CACHE_KEY=assessment_center
+CACHE_KEY=nsl_ac
 
 FRONT_END_HOME=http://10.10.32.217/assessment/ac-frontend/public
 TO_EMAIL=hemayet.nirjhoy@gmail.com
