--- a/.env
+++ b/.env
@@ -26,9 +26,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=ac_backend
+DB_DATABASE=assessment_center
 DB_USERNAME=root
-DB_PASSWORD=nothing
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
