update email notification

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="NSL - Assessment Center"
 APP_ENV=local
 APP_KEY=base64:VfiJ04BpjNz/eApsH0W52QdivpYOFfzlNGGRkJF6zGc=
 APP_DEBUG=true
-APP_URL=http://10.10.32.217/assessment/ac-frontend/public
+APP_URL=http://localhost:5000
 
 #EMAIL-SERVER-CONFIGURATION
 BULK_EMAIL_DELAY=2  #SECONDS
@@ -26,9 +26,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=ac_backend
+DB_DATABASE=assessment_center
 DB_USERNAME=root
-DB_PASSWORD=nothing
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
