removed personal email credentials

--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp-mail.outlook.com
 MAIL_PORT=587
 MAIL_USERNAME=mohammad.hemayet@neural-semiconductor.com
-MAIL_PASSWORD="EWUnirjhoy146"
+MAIL_PASSWORD=""
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=mohammad.hemayet@neural-semiconductor.com
 MAIL_FROM_NAME="${APP_NAME}"
