--- a/.env
+++ b/.env
@@ -53,10 +53,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp-mail.outlook.com
 MAIL_PORT=587
-MAIL_USERNAME=mohammad.hemayet@neural-semiconductor.com
+MAIL_USERNAME=ac@neural-semiconductor.com
 MAIL_PASSWORD=""
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=mohammad.hemayet@neural-semiconductor.com
+MAIL_FROM_ADDRESS=ac@neural-semiconductor.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
