assessment center email credentials updated

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp-mail.outlook.com
 MAIL_PORT=587
 MAIL_USERNAME=ac@neural-semiconductor.com
-MAIL_PASSWORD=""
+MAIL_PASSWORD="Noreply@nsl"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=ac@neural-semiconductor.com
 MAIL_FROM_NAME="${APP_NAME}"
