--- a/.env
+++ b/.env
@@ -24,12 +24,12 @@ LOG_CHANNEL=stack
 #DB_USERNAME=root
 #DB_PASSWORD=
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
+DB_PORT=3306
 DB_DATABASE=ac_backend
-DB_USERNAME=postgres
-DB_PASSWORD=nothing
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
