--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/helper.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
