Migration and database related changes

--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 API_URL=http://127.0.0.1:8000/api
 
-#EMAIL-SERVER-CONFIGURATION
+# EMAIL-SERVER-CONFIGURATION           new comment
 BULK_EMAIL_DELAY=2  #SECONDS
 EMAIL_SERVER_JOB_DELAY=2 #SECONDS
-EMAIL_SERVER_URL=http://localhost:6900/api/v1/
+EMAIL_SERVER_URL=http://localhost:8002/api/v1/
 
 #CACHING-CONFIGURATION
 CACHE_KEY=nsl_ac
-
+FRONT_END_BASE=http://localhost:8080
 FRONT_END_HOME=http://localhost:5000/assessment/ac-frontend/public
 TO_EMAIL=hemayet.nirjhoy@gmail.com
 LOG_CHANNEL=stack
@@ -41,6 +41,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 #MAIL_DRIVER=smtp
 #MAIL_HOST=smtp.mailtrap.io.
 #MAIL_PORT=2525
@@ -50,14 +51,25 @@ REDIS_PORT=6379
 #MAIL_FROM_ADDRESS=ac@nsl.com
 #MAIL_FROM_NAME="${APP_NAME}"
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp-mail.outlook.com
-MAIL_PORT=587
-MAIL_USERNAME=ac@neural-semiconductor.com
-MAIL_PASSWORD="Noreply@nsl"
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=ac@neural-semiconductor.com
-MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=8889971482c8dc
+# MAIL_PASSWORD=7f9bba2c55431b
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=ac@neural-semiconductor.com
+# MAIL_FROM_NAME="${APP_NAME}"
+
+
+# new comment
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp-mail.outlook.com
+# MAIL_PORT=587
+# MAIL_USERNAME=ac@neural-semiconductor.com
+# MAIL_PASSWORD="Noreply@nsl"
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=ac@neural-semiconductor.com
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
