--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2|^8.0",
         "ext-json": "*",
         "barryvdh/laravel-dompdf": "^0.9.0",
+        "doctrine/dbal": "^3.5",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
