--- a/.env
+++ b/.env
@@ -8,21 +8,14 @@ API_URL=http://127.0.0.1:8000/api
 # EMAIL-SERVER-CONFIGURATION           new comment
 BULK_EMAIL_DELAY=2  #SECONDS
 EMAIL_SERVER_JOB_DELAY=2 #SECONDS
-EMAIL_SERVER_URL=http://localhost:8002/api/v1/
+EMAIL_SERVER_URL=http://10.10.32.54:8002/api/v1/
 
 #CACHING-CONFIGURATION
 CACHE_KEY=nsl_ac
-FRONT_END_BASE=http://localhost:8080
-FRONT_END_HOME=http://localhost:5000/assessment/ac-frontend/public
+FRONT_END_BASE=http://10.10.32.54:8080
+FRONT_END_HOME=http://10.10.32.54:5000/assessment/ac-frontend/public
 TO_EMAIL=hemayet.nirjhoy@gmail.com
 LOG_CHANNEL=stack
-
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=ac_backend
-#DB_USERNAME=root
-#DB_PASSWORD=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -30,6 +23,20 @@ DB_PORT=3306
 DB_DATABASE=ac_backend
 DB_USERNAME=root
 DB_PASSWORD=
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=ac_backend_test
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+# DB_CONNECTION=pgsql
+# DB_HOST=10.10.33.248
+# DB_PORT=5432
+# DB_DATABASE=ac-dev
+# DB_USERNAME=postgres
+# DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
