--- a/.env
+++ b/.env
@@ -8,21 +8,21 @@ API_URL=http://127.0.0.1:8000/api
 # EMAIL-SERVER-CONFIGURATION           new comment
 BULK_EMAIL_DELAY=2  #SECONDS
 EMAIL_SERVER_JOB_DELAY=2 #SECONDS
-EMAIL_SERVER_URL=http://10.10.32.54:8002/api/v1/
+EMAIL_SERVER_URL=http://127.0.0.1:8002/api/v1/
 
 #CACHING-CONFIGURATION
 CACHE_KEY=nsl_ac
-FRONT_END_BASE=http://10.10.32.54:8080
-FRONT_END_HOME=http://10.10.32.54:5000/assessment/ac-frontend/public
+FRONT_END_BASE=http://127.0.0.1:8080
+FRONT_END_HOME=http://127.0.0.1:5000/assessment/ac-frontend/public # need to clearify 
 TO_EMAIL=hemayet.nirjhoy@gmail.com
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=ac_backend
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=ac_backend
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
@@ -31,12 +31,12 @@ DB_PASSWORD=
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-# DB_CONNECTION=pgsql
-# DB_HOST=10.10.33.248
-# DB_PORT=5432
-# DB_DATABASE=ac-dev
-# DB_USERNAME=postgres
-# DB_PASSWORD=root
+DB_CONNECTION=pgsql
+DB_HOST=10.10.33.248
+DB_PORT=5432
+DB_DATABASE=ac-prod
+DB_USERNAME=dev
+DB_PASSWORD=dev!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -66,7 +66,14 @@ REDIS_PORT=6379
 # MAIL_ENCRYPTION=tls
 # MAIL_FROM_ADDRESS=ac@neural-semiconductor.com
 # MAIL_FROM_NAME="${APP_NAME}"
-
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp-mail.outlook.com
+MAIL_PORT=587
+MAIL_USERNAME=saif.mahmud@neural-semiconductor.com
+MAIL_PASSWORD="Smahmud@nsl21"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=saif.mahmud@neural-semiconductor.com
+MAIL_FROM_NAME="${APP_NAME}"
 
 # new comment
 # MAIL_DRIVER=smtp
