--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 API_URL=http://127.0.0.1:8000/api
 
+EMAIL_BULK_ADDRESS=http://10.10.33.248:48218/exam-invitation/
+
 # EMAIL-SERVER-CONFIGURATION           new comment
 BULK_EMAIL_DELAY=2  #SECONDS
 EMAIL_SERVER_JOB_DELAY=2 #SECONDS
